labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cuda-test
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: cache
            operator: In
            values:
            - redis
        topologyKey: topology.kubernetes.io/zone
      podAntiAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
            matchExpressions:
            - key: app
              operator: In
              values:
              - spring-music
        topologyKey: topology.kubernetes.io/zone
  containers:
    - name: cuda-test
      image: "yanivomc/spring-music:latest"
