svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-svc
spec:
  selector:
    app: ui
  - name: http-web
      port: 80
      protocol: TCP
      targetPort: 8080
  type: LoadBalancer
