wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-db
  template:
    metadata:
      labels:
        app: wordpress-db
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - name: mysql-port
          containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: db-data
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: wordpress-db-pvc
---
kind: Service      
apiVersion: v1     
metadata:
  name: wordpress-db 
spec:
  selector:
    app: wordpress-db
  ports:          
  - name: wordpressdb-connector    
    protocol: TCP
    port: 3306
    targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:4-php7.0
        ports:
        - name: http-port
          containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  ports:
  - port: 31001
    nodePort: 31001
    targetPort: http-port
    protocol: TCP
  selector:
    app: wordpress
  type: LoadBalancer
